[fixed] wa button z-index&href

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -166,6 +166,7 @@ body {
   position: fixed;
   bottom: 10px;
   right: 10px;
+  z-index: 10;
   a{
     text-decoration: none;
     color: #FFFFFF;
